# CCProf

./: LICENSE.txt  README.md  README.txt  build.sh  clean_result.sh  help.sh  plot.sh  reproduce_cacheStat.sh  reproduce_result.sh
CCProf/: buildAnalyzer.sh  cleanAll.sh  convert2  convertCode.c  papiAllBuild.sh  papiBuildScript.sh  papiLibmonitorScript.sh  papiLibmonitorScript_makeOnly.sh  runCCprof.sh
CCProf/LoopAnalyzer/: a.hpcstruct  adi_O0.hpcstruct  findinnerloops.py  loopout  loops  loopsAll  loopsa.npy  makefile  prepareLoop.sh  treeXtract  treeXtract.cpp
CCProf/libmonitor/libmonitor/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  configure.lineno  configure~  libtool
CCProf/libmonitor/libmonitor/.svn/: wc.db
CCProf/libmonitor/libmonitor/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
CCProf/libmonitor/libmonitor/install/include/: monitor.h
CCProf/libmonitor/libmonitor/install/lib/: libmonitor.la  libmonitor.so.0
CCProf/libmonitor/libmonitor/installStaic/lib64/: libmonitor.la
CCProf/libmonitor/libmonitor/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  atomic.h  callback.c  callback.c~  common.h  dlopen.c  fork.c  main.c  main.c~  main_withoutmain.c  malloc.c~  memleak.c  memleak.c~  monitor-link.in  monitor-run.in  monitor.h~  mpi.c  mpi_comm_c.c  mpi_comm_f0.c  mpi_comm_f1.c  mpi_comm_f2.c  mpi_final_c.c  mpi_final_f0.c  mpi_final_f1.c  mpi_final_f2.c  mpi_init_c.c  mpi_init_f0.c  mpi_init_f1.c  mpi_init_f2.c  mpi_init_thread_c.c  mpi_init_thread_f0.c  mpi_init_thread_f1.c  mpi_init_thread_f2.c  pmpi.c  pthread_h.h  signal.c  spinlock.h  (+1 more)
CCProf/libmonitor/libmonitor/src/.deps/: libmonitor_la-callback.Plo  libmonitor_la-dlopen.Plo  libmonitor_la-fork.Plo  libmonitor_la-main.Plo  libmonitor_la-malloc.Plo  libmonitor_la-memleak.Plo  libmonitor_la-mpi.Plo  libmonitor_la-mpi_comm_c.Plo  libmonitor_la-mpi_comm_f0.Plo  libmonitor_la-mpi_comm_f1.Plo  libmonitor_la-mpi_comm_f2.Plo  libmonitor_la-mpi_final_c.Plo  libmonitor_la-mpi_final_f0.Plo  libmonitor_la-mpi_final_f1.Plo  libmonitor_la-mpi_final_f2.Plo  libmonitor_la-mpi_init_c.Plo  libmonitor_la-mpi_init_f0.Plo  libmonitor_la-mpi_init_f1.Plo  libmonitor_la-mpi_init_f2.Plo  libmonitor_la-mpi_init_thread_c.Plo  libmonitor_la-mpi_init_thread_f0.Plo  libmonitor_la-mpi_init_thread_f1.Plo  libmonitor_la-mpi_init_thread_f2.Plo  libmonitor_la-pmpi.Plo  libmonitor_la-pthread.Plo  libmonitor_la-signal.Plo  libmonitor_la-utils.Plo  libmonitor_wrap_a-callback.Po  libmonitor_wrap_a-dlopen.Po  libmonitor_wrap_a-fork.Po  libmonitor_wrap_a-main.Po  libmonitor_wrap_a-malloc.Po  libmonitor_wrap_a-memleak.Po  libmonitor_wrap_a-mpi.Po  libmonitor_wrap_a-mpi_comm_c.Po  libmonitor_wrap_a-mpi_comm_f0.Po  libmonitor_wrap_a-mpi_comm_f1.Po  libmonitor_wrap_a-mpi_comm_f2.Po  libmonitor_wrap_a-mpi_final_c.Po  libmonitor_wrap_a-mpi_final_f0.Po  (+13 more)
CCProf/libmonitor/libmonitor/tests/: Makefile  cancel.c  early.c  emain.c  exit.c  shootdown.c  thread_fork.c
benchmarks/dftc/: compile.sh  dftc.lst  makefile  memToolInfoForClient  readme.txt  t.lst
benchmarks/dftc/source/: basic_dp_complex_dft_1d.c  basic_dp_complex_dft_2d.c  basic_dp_complex_dft_2d_4096.c  basic_dp_complex_dft_2d_4096_pad.c  basic_dp_complex_dft_2d_pad.c  (+22 more)
modelInput/: freq_10151.csv  freq_1212.csv  freq_171.csv  freq_264.csv  freq_4812.csv  freq_494.csv  freq_705.csv
reproduce_case_studies_of_cgo2018_paper/: getStat_cache.py  getStat_overhead.py  getStat_speedup.py  plotCase.py  plotCase_ADI.py  plotCase_HimenoBMT.py  plotCase_Kripke.py  plotCase_MKLFFT.py  plotCase_NW.py  plotCase_Tiny_DNN.py
reproduce_case_studies_of_cgo2018_paper/ADI_PolyBench/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/ADI_PolyBench_Optimized/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/HimenoBMT/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/HimenoBMT_Optimized/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/Kripke_original/: ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh
reproduce_case_studies_of_cgo2018_paper/Kripke_representative_loop/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/Kripke_representative_loop_Optimized/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/MKL_FFT/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/MKL_FFT_Optimized/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/NW_Rodinia/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/NW_Rodinia_Optimized/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh  nohup.out
reproduce_case_studies_of_cgo2018_paper/Tiny_DNN_cifar/: ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh
reproduce_case_studies_of_cgo2018_paper/Tiny_DNN_representative_loop/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
reproduce_case_studies_of_cgo2018_paper/Tiny_DNN_representative_loop_Optimized/: ccProf_cache_stat.sh  ccProf_run_and_analyze.sh  ccProf_run_and_cdf.sh  ccProf_runtime_cache_stat.sh
scripts/: ccProfAnalysis.py  ccProfCDFdata.py  checkDependencies.sh  convertscript.sh  hpctoolkitInstall.sh  pythonDependency.py
(+559 files in other folders)
